# kernel-gym

./: .gitignore  NOTES.md  README.md  SETUP.md  card.json  modal_run.py  pyproject.toml
attempts/opus48/: t1_fused_bias_gelu.py  t1_swiglu.py  t2_rmsnorm.py  t2_rope.py  t2_softmax.py  t3_int8_matmul.py  t3_layernorm.py  t3_matmul.py  t4_cross_entropy.py  t4_gqa_attention.py  t4_layernorm_backward.py  t4_sliding_window.py  t4_w4a16_matmul.py  t5_flash_attention.py  t5_flash_attention_bwd.py  t5_moe_grouped_gemm.py
attempts/sonnet5/: t1_fused_bias_gelu.py  t1_swiglu.py  t2_rmsnorm.py  t2_rope.py  t2_softmax.py  t3_int8_matmul.py  t3_layernorm.py  t3_matmul.py  t4_cross_entropy.py  t4_gqa_attention.py  t4_layernorm_backward.py  t4_sliding_window.py  t4_w4a16_matmul.py  t5_flash_attention.py  t5_flash_attention_bwd.py  t5_moe_grouped_gemm.py
attempts/stubs/: t1_fused_bias_gelu.py  t1_swiglu.py  t2_rmsnorm.py  t2_rope.py  t2_softmax.py  t3_int8_matmul.py  t3_layernorm.py  t3_matmul.py  (+8 more)
challenges/: t1_fused_bias_gelu.py  t1_swiglu.py  t2_rmsnorm.py  t2_rope.py  t2_softmax.py  t3_int8_matmul.py  t3_layernorm.py  t3_matmul.py  t4_cross_entropy.py  t4_gqa_attention.py  t4_layernorm_backward.py  t4_sliding_window.py  t4_w4a16_matmul.py  t5_flash_attention.py  t5_flash_attention_bwd.py  t5_moe_grouped_gemm.py
gym/: __init__.py  __main__.py  blank.py  harness.py  kernelbench.py  lint.py  registry.py  tri.py
results/: card-a10.json  card-h100.json  card-l4.json  card-opus48-cold-a10.json  card-sonnet5-cold-a10.json
tests/: test_challenges.py  test_reference_cpu.py
